samples/_failures_safe/1761253225_8f40ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2eaafa5.c: In function ‘main’:
./samples/SAFE/__tmp_d2eaafa5.c:174:23: error: expected ‘;’ at end of input
  174 |     state_machine_init
      |                       ^
      |                       ;
./samples/SAFE/__tmp_d2eaafa5.c:174:5: error: expected declaration or statement at end of input
  174 |     state_machine_init
      |     ^~~~~~~~~~~~~~~~~~
